REOPENED206934
[ iOS ] imported/w3c/web-platform-tests/IndexedDB/key-generators/reading-autoincrement-indexes-cursors.any.serviceworker.html is flaky failing.
https://bugs.webkit.org/show_bug.cgi?id=206934
Summary [ iOS ] imported/w3c/web-platform-tests/IndexedDB/key-generators/reading-auto...
Jason Lawrence
Reported 2020-01-29 08:07:39 PST
imported/w3c/web-platform-tests/IndexedDB/key-generators/reading-autoincrement-indexes-cursors.any.serviceworker.html Description: This test is flaky failing. This test is also flaky crashing, I will create another related bug for that issue. History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2FIndexedDB%2Fkey-generators%2Freading-autoincrement-indexes-cursors.any.serviceworker.html Diff: --- /Volumes/Data/slave/ios-simulator-13-debug-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/IndexedDB/key-generators/reading-autoincrement-indexes-cursors.any.serviceworker-expected.txt +++ /Volumes/Data/slave/ios-simulator-13-debug-tests-wk2/build/layout-test-results/imported/w3c/web-platform-tests/IndexedDB/key-generators/reading-autoincrement-indexes-cursors.any.serviceworker-actual.txt @@ -1,6 +1,4 @@ -PASS IDBIndex.openCursor() iterates over an index on the autoincrement key -PASS IDBIndex.openKeyCursor() iterates over an index on the autoincrement key -PASS IDBIndex.openCursor() iterates over an index not covering the autoincrement key -PASS IDBIndex.openKeyCursor() iterates over an index not covering the autoincrement key +Harness Error (TIMEOUT), message = null +
Attachments
Update Test Expectations (1.64 KB, patch)
2020-01-29 09:02 PST, Jason Lawrence
no flags
Patch (22.30 KB, patch)
2020-01-31 09:47 PST, Chris Dumez
no flags
Patch (23.94 KB, patch)
2020-01-31 10:00 PST, Chris Dumez
no flags
Patch (24.39 KB, patch)
2020-01-31 10:22 PST, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2020-01-29 08:08:19 PST
Jason Lawrence
Comment 2 2020-01-29 09:02:23 PST
Created attachment 389143 [details] Update Test Expectations
Truitt Savell
Comment 3 2020-01-29 09:09:05 PST
Comment on attachment 389143 [details] Update Test Expectations Clearing flags on attachment: 389143 Committed r255360: <https://trac.webkit.org/changeset/255360>
Jason Lawrence
Comment 4 2020-01-29 10:10:01 PST
After reviewing the dashboard, this appears to have regressed at 251589 (https://trac.webkit.org/changeset/251589/webkit). I am able to reproduce the flaky failure locally with run-webkit-tests iterations. Also, bug 206935 has been marked as a duplicate of 206396.
Chris Dumez
Comment 5 2020-01-31 09:47:43 PST
Chris Dumez
Comment 6 2020-01-31 10:00:08 PST
Chris Dumez
Comment 7 2020-01-31 10:22:30 PST
Chris Dumez
Comment 8 2020-01-31 12:58:51 PST
Comment on attachment 389372 [details] Patch Clearing flags on attachment: 389372 Committed r255518: <https://trac.webkit.org/changeset/255518>
Chris Dumez
Comment 9 2020-01-31 12:58:53 PST
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 10 2020-01-31 13:05:55 PST
Chris Dumez
Comment 11 2020-01-31 16:23:21 PST
Flakiness dashboard shows one timeout after this fix so this fix does not appear to be sufficient. Reopening.
Jason Lawrence
Comment 12 2020-02-11 14:44:33 PST
I have marked this test as failing while this issue is investigated further. https://trac.webkit.org/changeset/256375/webkit
Jason Lawrence
Comment 13 2020-02-21 13:37:26 PST
I have removed the expectation that was previously set when there was an issue. https://trac.webkit.org/changeset/257159/webkit
Jacob Uphoff
Comment 14 2020-03-04 11:00:15 PST
Looks like this is still failing with the same diff
Jacob Uphoff
Comment 15 2020-03-04 11:13:40 PST
Jacob Uphoff
Comment 16 2020-03-04 11:19:56 PST
I cloned the original radar that was closed and set expectations here: https://trac.webkit.org/changeset/257863/webkit
Note You need to log in before you can comment on or make changes to this bug.